tests/cases/success/multi_globals.c
int a = 1, b = 2;

int main() {
  return a + b - 3;
}
