tests/cases/fail/variadic_missing_fixed_arg.c
int printf(char *, ...);

int main() {
  return printf();
}
